[package]
name = "v-common-onto"
version = "0.1.2"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/onto/lib.rs"

[dependencies]
num = "0.2.1"
num-traits = "0.2.11"
chrono = "0.4"
v-cbr-codec = "0.7.1"
rmp = "^0.8"
rmp-serialize = "0.8.0"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rust_decimal = "1.0.3"
rio_turtle = "0.5.1"
rio_api = "0.5.1"
derivative = "2.1.1"